; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_message_is_empty.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_message_is_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64 }

@COMMIT_MSG_CLEANUP_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @message_is_empty(%struct.strbuf* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i32, align 4
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @COMMIT_MSG_CLEANUP_NONE, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %11 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %18

15:                                               ; preds = %9, %2
  %16 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %17 = call i32 @rest_is_empty(%struct.strbuf* %16, i32 0)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %15, %14
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @rest_is_empty(%struct.strbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
